--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -61,8 +61,8 @@ jobs:
               fi
               cd ../../
               pm2 delete ${{vars.GIT_REPO}}
-              echo "module.exports = { apps: [ { name: '${{vars.GIT_REPO}}', script: './hrApp', args: 'development', watch: true, } ] };" > ecosystem.config.js
-              pm2 start ecosystem.config.js
+              echo "module.exports = { apps: [ { name: '${{vars.GIT_REPO}}', script: './hrApp', args: 'development', watch: true, } ] };" > hr-be.config.js
+              pm2 start hr-be.config.js
               pm2 save
               
               
