--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -36,6 +36,8 @@ jobs:
               rm -rf ./${{vars.GIT_REPO}}
               git clone -b development https://oykos-development-hub:${{secrets.GIT_ACCESS_TOKEN}}@github.com/oykos-development-hub/${{vars.GIT_REPO}}.git
               cd ./${{vars.GIT_REPO}}
+              docker-compose down
+              docker-compose up -d
               if ! command -v go &> /dev/null; then
                 echo "Go version is 1.20 or higher!"
               elif [[ "$(go version)" != *"go1.20"* ]]; then
