--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -19,14 +19,28 @@ jobs:
             username: ${{vars.SSH_USER}}
             password: ${{secrets.SSH_PASSPHRASE}}
             script: |
-              # Install Docker
-              curl -fsSL https://get.docker.com -o get-docker.sh
-              sudo sh get-docker.sh
-              sudo usermod -aG docker $USER
-              # Install Docker Compose
-              sudo curl -L "https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-              sudo chmod +x /usr/local/bin/docker-compose
+              # Check if Docker is already installed
+              if ! [ -x "$(command -v docker)" ]; then
+                  # Install Docker
+                  curl -fsSL https://get.docker.com -o get-docker.sh
+                  sudo sh get-docker.sh
+                  sudo usermod -aG docker $USER
+              else
+                  echo "Docker is already installed."
+              fi
+
+              # Check if Docker Compose is already installed
+              if ! [ -x "$(command -v docker-compose)" ]; then
+                  # Install Docker Compose
+                  sudo curl -L "https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+                  sudo chmod +x /usr/local/bin/docker-compose
+              else
+                  echo "Docker Compose is already installed."
+              fi
+
+              # Display Docker Compose version
               docker-compose --version
+              
               cd /var/www/vhosts/oykos.me/${{vars.GIT_REPO}}.oykos.me
               [ -d "./github" ] && echo "Existing github directory" || mkdir github
               cd github
@@ -54,6 +68,7 @@ jobs:
               fi
               rm -rf ../../hrApp
               cp ./hrApp ../../
+              cp ./.env-example ../../.env
               if ! command -v pm2 &> /dev/null; then
                 echo "PM2 is not installed. Installing PM2..."
                 npm install pm2@latest -g
