Update code from GitLab

--- a/.env-example
+++ b/.env-example
@@ -13,7 +13,7 @@ KEY=1PHRVLHv3vjZrZnv3+rnxTdZ+bll1hB3
 
 # false for production, true for development
 
-DEBUG=true
+DEBUG=false
 
 # the port should we listen on
 
@@ -25,7 +25,7 @@ SERVER_NAME=localhost
 
 # should we use https?
 
-SECURE=false
+SECURE=true
 
 # database config - postgres or mysql
 
