Update code from GitLab

--- a/.env-example
+++ b/.env-example
@@ -4,8 +4,8 @@ APP_NAME=hr-ms-api
 
 MODULE_NAME=gitlab.sudovi.me/erp/hr-ms-api
 
-APP_URL=http://localhost:4100
-FRONTEND_URL=http://localhost:4001
+APP_URL=https://sss-erp-hr-be.oykos.me
+FRONTEND_URL=https://sss-erp.oykos.me
 
 # the encryption key; must be exactly 32 characters long
 
