Update code from GitLab

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,6 +12,8 @@ services:
       POSTGRES_PASSWORD: password
       POSTGRES_DB: hr
       PGDATA: /data/postgres
+      POSTGRES_SHARED_BUFFERS: "256MB"
+      POSTGRES_EFFECTIVE_CACHE_SIZE: "1GB"
     volumes:
       - postgres:/data/postgres
 
