--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,18 +2,18 @@ version: "3"
 
 services:
   #  start Postgres, and ensure that data is stored to a mounted volume
-  postgres:
-    image: "postgres:13.4"
-    ports:
-      - "5434:5432"
-    restart: always
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: hr
-      PGDATA: /data/postgres
-    volumes:
-      - postgres:/data/postgres
+  # postgres:
+  #   image: "postgres:13.4"
+  #   ports:
+  #     - "5434:5432"
+  #   restart: always
+  #   environment:
+  #     POSTGRES_USER: postgres
+  #     POSTGRES_PASSWORD: password
+  #     POSTGRES_DB: hr
+  #     PGDATA: /data/postgres
+  #   volumes:
+  #     - postgres:/data/postgres
 
   #  start Redis, and ensure that data is stored to a mounted volume
   redis:
