--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,27 +2,27 @@ version: "3"
 
 services:
   #  start Postgres, and ensure that data is stored to a mounted volume
-  postgres:
-    image: "postgres:13.4"
-    ports:
-      - "5434:5432"
-    restart: always
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: hr
-      PGDATA: /data/postgres
-    volumes:
-      - postgres:/data/postgres
+  # postgres:
+  #   image: "postgres:13.4"
+  #   ports:
+  #     - "5434:5432"
+  #   restart: always
+  #   environment:
+  #     POSTGRES_USER: postgres
+  #     POSTGRES_PASSWORD: password
+  #     POSTGRES_DB: hr
+  #     PGDATA: /data/postgres
+  #   volumes:
+  #     - postgres:/data/postgres
 
   #  start Redis, and ensure that data is stored to a mounted volume
-  redis:
-    image: "redis:alpine"
-    ports:
-      - "6379:6379"
-    restart: always
-    volumes:
-      - ./db-data/redis/:/data
+  # redis:
+  #   image: "redis:alpine"
+  #   ports:
+  #     - "6379:6379"
+  #   restart: always
+  #   volumes:
+  #     - ./db-data/redis/:/data
 
 volumes:
   postgres:
